import("//build/components.gni")
import("//build/rust/rustc_binary.gni")

rustc_binary("echo_client") {
  sources = [ "src/main.rs" ]
  deps = [
    "//src/lib/fuchsia-component",
  ]
}

fuchsia_component("echo_client_component") {
  manifest = "meta/echo_client.cml"
  component_name = "echo_client"
  deps = [ ":echo_client" ]
}
